@@ -110,7 +110,7 @@ class AksjonspunktUtlederForTidligereMottattYtelseTest extends EntityManagerAwar
 
         // Assert
         assertThat(aksjonspunktResultater).hasSize(1);
-        assertThat(aksjonspunktResultater.get(0).getAksjonspunktDefinisjon())
+        assertThat(aksjonspunktResultater.getFirst().aksjonspunktDefinisjon())
                 .isEqualTo(AksjonspunktDefinisjon.AVKLAR_OM_SØKER_HAR_MOTTATT_STØTTE);
     }
 
